[gd_scene load_steps=7 format=3 uid="uid://baysx4far3h4x"]

[ext_resource type="Script" path="res://option_selector.gd" id="1_ny3qm"]
[ext_resource type="PackedScene" uid="uid://b306eeheepv61" path="res://menu_button.tscn" id="2_2ks47"]
[ext_resource type="FontFile" uid="uid://dhbgcfs8kn0qo" path="res://font/connection_ii/ConnectionII.otf" id="3_gojhj"]

[sub_resource type="FontVariation" id="FontVariation_nst15"]
resource_local_to_scene = true
base_font = ExtResource("3_gojhj")
variation_transform = Transform2D(1, 0, 0, 1, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_vatf3"]
resource_local_to_scene = true
base_font = ExtResource("3_gojhj")
variation_transform = Transform2D(1, 0, 0, 1, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_xyhmv"]
resource_local_to_scene = true
base_font = ExtResource("3_gojhj")
variation_transform = Transform2D(-1.045, 0, 0, 1, 0, 1)

[node name="OptionSelector" type="HBoxContainer"]
offset_right = 1033.0
offset_bottom = 64.0
script = ExtResource("1_ny3qm")

[node name="PrevValueButton" parent="." instance=ExtResource("2_2ks47")]
custom_minimum_size = Vector2(40, 64)
layout_mode = 2
menu = "NONE"
action = "emit"

[node name="Label" parent="PrevValueButton" index="0"]
offset_right = 40.0
theme_override_fonts/font = SubResource("FontVariation_nst15")
text = "◀"

[node name="TextureButton" parent="PrevValueButton" index="1"]
offset_right = 40.0

[node name="ValueLabel" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_vatf3")
theme_override_font_sizes/font_size = 54
text = "DEFAULT"

[node name="NextValueButton" parent="." instance=ExtResource("2_2ks47")]
custom_minimum_size = Vector2(40, 64)
layout_mode = 2
menu = "NONE"
action = "emit"

[node name="Label" parent="NextValueButton" index="0"]
offset_right = 103.0
theme_override_fonts/font = SubResource("FontVariation_xyhmv")
text = "◀"

[node name="TextureButton" parent="NextValueButton" index="1"]
offset_right = 47.0

[connection signal="value_changed" from="." to="." method="_on_value_changed"]
[connection signal="pushed" from="PrevValueButton" to="." method="_on_prev_value_button_pushed"]
[connection signal="pushed" from="NextValueButton" to="." method="_on_next_value_button_pushed"]

[editable path="PrevValueButton"]
[editable path="NextValueButton"]
